--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "3d-react-carousal": "^3.1.0",
     "@coreui/coreui": "^3.4.0",
     "@coreui/icons": "^2.0.1",
     "@coreui/icons-react": "^1.1.0",
     "@coreui/react": "^3.4.6",
     "@material-ui/core": "^4.11.4",
-    "3d-react-carousal": "^3.1.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.6.0",
     "classnames": "^2.3.1",
@@ -25,6 +25,7 @@
     "react-html-datalist": "^2.0.4",
     "react-icons": "^4.2.0",
     "react-image-lightbox": "^5.1.1",
+    "react-input-moment": "^1.7.13",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -80,6 +81,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/fslightbox-react": "^1.4.0",
     "@types/googlemaps": "^3.43.3",
+    "@types/input-moment": "^0.4.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.15",
     "@types/react": "^16.14.8",
@@ -94,11 +96,16 @@
     "eslint-plugin-prettier": "^3.4.0",
     "fslightbox-react": "^1.6.2",
     "husky": "^4.3.8",
+    "input-moment": "^0.4.0",
     "lint-staged": "^10.5.4",
     "moment": "^2.29.1",
     "prettier": "^2.3.1",
     "react-coverflow": "^0.2.20",
+    "react-datepicker": "^4.1.1",
+    "react-datetime-picker": "^3.3.0",
     "react-docgen-typescript": "^1.22.0",
+    "react-inputs-validation": "^4.8.3",
+    "react-picky-date-time": "^1.6.1",
     "react-popupbox": "^2.0.8",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.1.2"
