--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -79,6 +79,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/flatpickr": "^3.1.2",
     "@types/fslightbox-react": "^1.4.0",
     "@types/googlemaps": "^3.43.3",
     "@types/input-moment": "^0.4.2",
@@ -87,6 +88,7 @@
     "@types/react": "^16.14.8",
     "@types/react-big-calendar": "^0.33.0",
     "@types/react-dom": "^16.9.13",
+    "@types/react-flatpickr": "^3.8.4",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.26.1",
@@ -104,6 +106,7 @@
     "react-datepicker": "^4.1.1",
     "react-datetime-picker": "^3.3.0",
     "react-docgen-typescript": "^1.22.0",
+    "react-flatpickr": "^3.10.7",
     "react-inputs-validation": "^4.8.3",
     "react-picky-date-time": "^1.6.1",
     "react-popupbox": "^2.0.8",
