--- a/be-app/package.json
+++ b/be-app/package.json
@@ -17,7 +17,8 @@
         "http-errors": "~1.6.3",
         "jade": "~1.11.0",
         "morgan": "~1.9.1",
-        "mysql2": "^2.2.5"
+        "mysql2": "^2.2.5",
+        "nodemailer": "^6.6.2"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
