--- a/be-app/tsconfig.json
+++ b/be-app/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES5",
+        "experimentalDecorators": true,
+        "target": "ES6",
         "module": "commonjs",
         "allowJs": true,
         "checkJs": true,
