--- a/be-app/package.json
+++ b/be-app/package.json
@@ -16,6 +16,8 @@
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
         "jade": "~1.11.0",
+        "jwt-decode": "^3.1.2",
+        "jwt-simple": "^0.5.6",
         "morgan": "~1.9.1",
         "mysql2": "^2.2.5",
         "nodemailer": "^6.6.2",
@@ -27,6 +29,7 @@
         "@types/cors": "^2.8.11",
         "@types/express": "^4.17.12",
         "@types/http-errors": "^1.8.0",
+        "@types/jsonwebtoken": "^8.5.4",
         "@types/morgan": "^1.9.2",
         "@types/node": "^15.12.5",
         "@types/passport": "^1.0.6",
