--- a/be-app/tsconfig.json
+++ b/be-app/tsconfig.json
@@ -7,6 +7,6 @@
         "checkJs": true,
         "esModuleInterop": true,
         "outDir": "./dist",
-        "typeRoots": ["./node_modules/@types"]
+        "typeRoots": ["./node_modules/@types", "./src/typing/index.d.ts"]
     }
 }
