--- a/be-app/package.json
+++ b/be-app/package.json
@@ -10,21 +10,30 @@
         "build": "tsc"
     },
     "dependencies": {
+        "compression": "^1.7.4",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
+        "dayjs": "^1.10.6",
         "debug": "~2.6.9",
         "express": "~4.16.1",
+        "express-validation": "^3.0.8",
+        "express-winston": "^4.1.0",
+        "helmet": "^4.6.0",
         "http-errors": "~1.6.3",
+        "http-status": "^1.5.0",
         "jade": "~1.11.0",
         "jwt-decode": "^3.1.2",
         "jwt-simple": "^0.5.6",
         "morgan": "~1.9.1",
         "mysql2": "^2.2.5",
         "nodemailer": "^6.6.2",
+        "passport": "^0.4.1",
         "reflect-metadata": "^0.1.13",
-        "sequelize-typescript": "^2.1.0"
+        "sequelize-typescript": "^2.1.0",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
+        "@types/compression": "^1.7.1",
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.11",
         "@types/express": "^4.17.12",
