--- a/fe-app/Dockerfile
+++ b/fe-app/Dockerfile
@@ -3,5 +3,6 @@ WORKDIR /app
 COPY package.json /app
 COPY package-lock.json /app
 RUN npm install
+RUN npm rebuild node-sass
 EXPOSE 3000 
 CMD ["npm", "start"]
