--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "mdb-ui-kit": "^3.6.0",
     "node-sass": "^4.14.1",
@@ -35,6 +36,7 @@
     "redux-saga": "^1.1.3",
     "simple-react-lightbox": "^3.6.6",
     "swiper": "^6.7.0",
+    "xlsx": "^0.17.0",
     "yup": "^0.32.9"
   },
   "scripts": {
@@ -79,6 +81,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/file-saver": "^2.0.3",
     "@types/flatpickr": "^3.1.2",
     "@types/fslightbox-react": "^1.4.0",
     "@types/googlemaps": "^3.43.3",
