--- a/be-app/package.json
+++ b/be-app/package.json
@@ -10,6 +10,7 @@
         "build": "tsc"
     },
     "dependencies": {
+        "camelcase-keys": "^7.0.0",
         "compression": "^1.7.4",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
