--- a/be-app/.editorconfig
+++ b/be-app/.editorconfig
@@ -7,6 +7,7 @@ root = true
 indent_style = space
 indent_size = 4
 end_of_line = crlf
+insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = false
 insert_final_newline = false
