--- a/be-app/package.json
+++ b/be-app/package.json
@@ -42,10 +42,12 @@
         "@types/jsonwebtoken": "^8.5.4",
         "@types/morgan": "^1.9.2",
         "@types/node": "^15.12.5",
+        "@types/nodemailer": "^6.4.4",
         "@types/passport": "^1.0.6",
         "dotenv": "^10.0.0",
         "nodemon": "^2.0.7",
         "passport-jwt": "^4.0.0",
+        "prettier": "2.3.2",
         "sequelize": "^6.6.4",
         "sequelize-cli": "^6.2.0",
         "ts-node": "^10.0.0",
