--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - /app/node_modules
     env_file:
       - ./be-app/.env
+    ports:
+      - "4000:4000"
     depends_on:
       - db
 
@@ -25,6 +27,8 @@ services:
     restart: always
     volumes:
       - ./fe-app:/app
+    environment: 
+      - CHOKIDAR_USEPOLLING=true
     ports:
       - "3000:3000"
 
@@ -55,7 +59,7 @@ services:
     image: mysql:8.0
     restart: always
     ports:
-      - "3307:3306"
+      - "3306:3306"
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
