fix request component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,5 @@
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "prettier.useTabs": true,
-  "eslint.runtime": "dbaeumer.vscode-eslint"
+  "prettier.useTabs": true
 }
