--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -3,38 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "3d-react-carousal": "^3.1.0",
     "@coreui/coreui": "^3.4.0",
     "@coreui/icons": "^2.0.1",
     "@coreui/icons-react": "^1.1.0",
     "@coreui/react": "^3.4.6",
-    "@material-ui/core": "^4.11.4",
     "axios": "^0.21.0",
-    "bootstrap": "^4.6.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.5",
     "dotenv": "^10.0.0",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
-    "mdb-ui-kit": "^3.6.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-big-calendar": "^0.33.5",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-draggable": "^4.4.3",
-    "react-html-datalist": "^2.0.4",
     "react-icons": "^4.2.0",
-    "react-image-lightbox": "^5.1.1",
     "react-input-moment": "^1.7.13",
-    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
-    "simple-react-lightbox": "^3.6.6",
     "swiper": "^6.7.0",
     "xlsx": "^0.17.0",
     "yup": "^0.32.9"
@@ -99,20 +89,15 @@
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "fslightbox-react": "^1.6.2",
     "husky": "^4.3.8",
     "input-moment": "^0.4.0",
     "lint-staged": "^10.5.4",
     "moment": "^2.29.1",
     "prettier": "^2.3.1",
-    "react-coverflow": "^0.2.20",
-    "react-datepicker": "^4.1.1",
-    "react-datetime-picker": "^3.3.0",
     "react-docgen-typescript": "^1.22.0",
     "react-flatpickr": "^3.10.7",
     "react-inputs-validation": "^4.8.3",
-    "react-picky-date-time": "^1.6.1",
-    "react-popupbox": "^2.0.8",
+    "react-test-renderer": "^17.0.2",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.1.2"
   },
