add unit test for user api

--- a/be-app/Dockerfile
+++ b/be-app/Dockerfile
@@ -2,7 +2,8 @@ FROM node:14
 WORKDIR /app  
 COPY ./package*.json /app
 RUN npm install  
-RUN npm install -g npm  
+RUN npm install -g npm
+RUN npm i -g mocha   
 # COPY . /app  
 EXPOSE 4000  
 CMD [ "npm", "start" ]
