--- a/be-app/package.json
+++ b/be-app/package.json
@@ -1,13 +1,15 @@
 {
     "name": "nodejs-typescript",
     "version": "0.0.0",
+    "type": "commonjs",
     "private": true,
     "scripts": {
         "start": "npm run db:migrate && nodemon -L src/index.ts",
         "db:migrate": "npm run build:migrations && sequelize db:migrate",
         "build:migrations": "tsc -p tsconfig.migrations.json",
         "migration:generate": "sequelize migration:generate --migrations-path src/migrations --name",
-        "build": "tsc"
+        "build": "tsc",
+        "test": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register test/test.ts\""
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
@@ -24,6 +26,7 @@
         "http-errors": "~1.6.3",
         "http-status": "^1.5.0",
         "jade": "~1.11.0",
+        "mocha": "^9.0.3",
         "morgan": "~1.9.1",
         "mysql2": "^2.2.5",
         "nodemailer": "^6.6.2",
@@ -34,22 +37,35 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/chai": "^4.2.21",
+        "@types/chai-http": "^4.2.0",
         "@types/compression": "^1.7.1",
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.11",
         "@types/express": "^4.17.12",
         "@types/http-errors": "^1.8.0",
         "@types/jsonwebtoken": "^8.5.4",
+        "@types/mocha": "^9.0.0",
         "@types/morgan": "^1.9.2",
         "@types/node": "^15.12.5",
         "@types/nodemailer": "^6.4.4",
         "@types/passport": "^1.0.6",
+        "@types/supertest": "^2.0.11",
+        "@typescript-eslint/eslint-plugin": "^4.28.5",
+        "@typescript-eslint/parser": "^4.28.5",
+        "chai": "^3.5.0",
+        "chai-http": "^1.0.0",
         "dotenv": "^10.0.0",
+        "eslint": "^7.31.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.23.4",
+        "jest": "^27.0.6",
         "nodemon": "^2.0.7",
         "passport-jwt": "^4.0.0",
         "prettier": "2.3.2",
         "sequelize": "^6.6.4",
         "sequelize-cli": "^6.2.0",
+        "supertest": "^6.1.4",
         "ts-node": "^10.0.0",
         "typescript": "^3.9.7"
     },
