--- a/be-app/tsconfig.json
+++ b/be-app/tsconfig.json
@@ -1,4 +1,6 @@
 {
+    "compileOnSave": true,
+    "files": ["src/index.ts", "config/env.ts"],
     "compilerOptions": {
         "experimentalDecorators": true,
         "target": "ES6",
@@ -7,6 +9,7 @@
         "checkJs": true,
         "esModuleInterop": true,
         "outDir": "./dist",
+        "types": ["mocha"],
         "typeRoots": ["./node_modules/@types", "./src/typing/index.d.ts"]
     }
 }
