--- a/fe-app/Dockerfile
+++ b/fe-app/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:14
 WORKDIR /app
-COPY package.json /app
-COPY package-lock.json /app
+COPY ./package*.json /app
 RUN npm install
 RUN npm rebuild node-sass
 EXPOSE 3000 
