--- a/be-app/config/config.json
+++ b/be-app/config/config.json
@@ -7,10 +7,10 @@
         "dialect": "mysql"
     },
     "test": {
-        "username": "root",
-        "password": null,
-        "database": "database_test",
-        "host": "127.0.0.1",
+        "username": "user",
+        "password": "secret",
+        "database": "project_test",
+        "host": "localhost",
         "dialect": "mysql"
     },
     "production": {
