--- a/be-app/tsconfig.json
+++ b/be-app/tsconfig.json
@@ -1,6 +1,4 @@
 {
-    "compileOnSave": true,
-    "files": ["src/index.ts", "config/env.ts"],
     "compilerOptions": {
         "experimentalDecorators": true,
         "target": "ES6",
@@ -9,7 +7,8 @@
         "checkJs": true,
         "esModuleInterop": true,
         "outDir": "./dist",
-        "types": ["mocha"],
         "typeRoots": ["./node_modules/@types", "./src/typing/index.d.ts"]
-    }
+    },
+    "files": ["src/index.ts", "config/env.ts"],
+    "include": ["test/**/*.test.ts", "test/mocks/**/*.json", ".sequelizerc"]
 }
