--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,6 @@ services:
   #     - NODE_ENV=development
   #   volumes:
   #     - ./be-app:/app
-  #     - ./be-app/src/migrations:/app/migrations
   #     - /app/node_modules
   #   env_file:
   #     - ./be-app/.env
@@ -63,13 +62,14 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: helloworld
+      MYSQL_DATABASE: project_test
       MYSQL_USER: user
       MYSQL_PASSWORD: secret
-    volumes:
-      - ./be-app/docker/services/db/data:/var/lib/mysql
+    # volumes:
+    #   - ./be-app/docker/services/db/data:/var/lib/mysql
     cap_add:
       - SYS_NICE
+
   # redis:
   #   image: redis:latest
   #   restart: always
