--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,11 +62,11 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: helloworld
+      MYSQL_DATABASE: project_test
       MYSQL_USER: user
       MYSQL_PASSWORD: secret
-    volumes:
-      - ./be-app/docker/services/db/data:/var/lib/mysql
+    # volumes:
+    #   - ./be-app/docker/services/db/data:/var/lib/mysql
     cap_add:
       - SYS_NICE
 
