--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,46 @@
 version: "3.5"
 
 services:
-  # node:
-  #   build:
-  #     context: ./be-app
-  #   working_dir: /app
-  #   restart: always
-  #   tty: true
-  #   environment:
-  #     - NODE_ENV=development
-  #   volumes:
-  #     - ./be-app:/app
-  #     - /app/node_modules
-  #   env_file:
-  #     - ./be-app/.env
-  #   ports:
-  #     - "4000:4000"
-  #   depends_on:
-  #     - db
+  node:
+    build:
+      context: ./be-app
+    working_dir: /app
+    restart: always
+    tty: true
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - ./be-app:/app
+      - /app/node_modules
+    env_file:
+      - ./be-app/.env
+    ports:
+      - "4000:4000"
+    depends_on:
+      - db
 
-  # react:
-  #   build:
-  #     context: ./fe-app
-  #   working_dir: /app
-  #   restart: always
-  #   volumes:
-  #     - ./fe-app:/app
-  #   environment:
-  #     - CHOKIDAR_USEPOLLING=true
-  #   ports:
-  #     - "3000:3000"
+  react:
+    build:
+      context: ./fe-app
+    working_dir: /app
+    restart: always
+    volumes:
+      - ./fe-app:/app
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    ports:
+      - "3000:3000"
 
-  # nginx:
-  #   image: nginx:latest
-  #   restart: always
-  #   ports:
-  #     - "443:443"
-  #     - "80:80"
-  #   volumes:
-  #     - ./be-app/docker/services/nginx/conf:/etc/nginx/conf.d
-  #     - ./be-app:/app
-  #   working_dir: /app
+  nginx:
+    image: nginx:latest
+    restart: always
+    ports:
+      - "443:443"
+      - "80:80"
+    volumes:
+      - ./be-app/docker/services/nginx/conf:/etc/nginx/conf.d
+      - ./be-app:/app
+    working_dir: /app
 
   # phpmyadmin:
   #   image: phpmyadmin/phpmyadmin:4.6
@@ -54,6 +54,20 @@ services:
   #   depends_on:
   #     - db
 
+  # db:
+  #   image: mysql:8.0
+  #   restart: always
+  #   ports:
+  #     - "3306:3306"
+  #   command: --default-authentication-plugin=mysql_native_password
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: root
+  #     MYSQL_DATABASE: project_test
+  #     MYSQL_USER: user
+  #     MYSQL_PASSWORD: secret
+  #   cap_add:
+  #     - SYS_NICE
+
   db:
     image: mysql:8.0
     restart: always
@@ -62,13 +76,11 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: project_test
+      MYSQL_DATABASE: helloworld
       MYSQL_USER: user
       MYSQL_PASSWORD: secret
-    # volumes:
-    #   - ./be-app/docker/services/db/data:/var/lib/mysql
-    cap_add:
-      - SYS_NICE
+    volumes:
+      - ./be-app/docker/services/db/data:/var/lib/mysql
 
   # redis:
   #   image: redis:latest
