--- a/be-app/package.json
+++ b/be-app/package.json
@@ -56,6 +56,7 @@
         "@types/node": "^15.12.5",
         "@types/nodemailer": "^6.4.4",
         "@types/passport": "^1.0.6",
+        "@types/passport-jwt": "^3.0.6",
         "@types/sinon": "^10.0.2",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^4.28.5",
