--- a/be-app/package.json
+++ b/be-app/package.json
@@ -59,6 +59,8 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/sinon": "^10.0.2",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "chai": "^3.5.0",
