using redis and bull create queue email

--- a/be-app/config/config.json
+++ b/be-app/config/config.json
@@ -3,7 +3,7 @@
     "username": "user",
     "password": "secret",
     "database": "helloworld",
-    "host": "localhost",
+    "host": "db",
     "dialect": "mysql"
   },
   "test": {
