--- a/be-app/package.json
+++ b/be-app/package.json
@@ -43,6 +43,8 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^3.15.3",
+    "@types/bull-board": "^0.6.0",
     "@types/chai": "^4.2.21",
     "@types/chai-http": "^4.2.0",
     "@types/compression": "^1.7.1",
@@ -53,7 +55,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^15.12.5",
+    "@types/node": "^15.14.7",
     "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.6",
@@ -63,6 +65,8 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
+    "bull": "^3.28.1",
+    "bull-board": "^2.1.3",
     "chai": "^3.5.0",
     "chai-http": "^1.0.0",
     "cross-env": "^7.0.3",
@@ -70,7 +74,6 @@
     "eslint": "^7.31.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.4",
-    "faker": "^5.5.3",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
     "passport-jwt": "^4.0.0",
