--- a/be-app/tsconfig.json
+++ b/be-app/tsconfig.json
@@ -1,14 +1,14 @@
 {
-    "compilerOptions": {
-        "experimentalDecorators": true,
-        "target": "ES6",
-        "module": "commonjs",
-        "allowJs": true,
-        "checkJs": true,
-        "esModuleInterop": true,
-        "outDir": "./dist",
-        "typeRoots": ["./node_modules/@types", "./src/typing/index.d.ts"]
-    },
-    "files": ["src/index.ts", "config/env.ts"],
-    "include": ["test/**/*.test.ts", "test/mocks/**/*.json", ".sequelizerc"]
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "target": "ES6",
+    "module": "commonjs",
+    "allowJs": true,
+    "checkJs": true,
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "typeRoots": ["./node_modules/@types", "./src/typing/index.d.ts"]
+  },
+  "files": ["src/index.ts", "config/env.ts"],
+  "include": ["test/**/*.test.ts", "test/mocks/**/*.json", ".sequelizerc", "lib/*.ts"]
 }
