fix .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,9 @@ build-code-job:
 
 test-code-job:
   stage: test
+  before_script:
+    - npm install docker-compose
+    - docker-compose version
   script:
     - echo "If the files are built successfully, test some files with one command:"
     - docker-compose up -d
