--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,10 +16,11 @@ build-code-job:
 test-code-job:
   stage: test
   before_script:
+    - npm install
     - npm install docker-compose
     - docker-compose version
   script:
     - echo "If the files are built successfully, test some files with one command:"
-    - docker-compose up -d
+    - docker compose up -d
     - sleep 15
-    - docker-compose exec -T node npm run test
+    - docker compose exec -T node npm run test
