--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build-code-job:
 test-code-job:
   stage: test
   before_script:
-    - cd /builds/lampt/wsm-dev/
+    - cd ./builds/lampt/wsm-dev
     - npm install
     - npm install docker-compose
     - docker-compose version
