--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker/compose:3.5
+image: docker/compose:alpine-1.27.4
 
 stages:
   - build
@@ -20,6 +20,6 @@ test-code-job:
     - docker-compose version
   script:
     - echo "If the files are built successfully, test some files with one command:"
-    - docker compose up -d
+    - docker-compose up -d
     - sleep 15
-    - docker compose exec -T node npm run test
+    - docker-compose exec -T node npm run test
