update .gitlab-ci.yml v9

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ build-code-job:
 test-code-job:
   stage: test
   before_script:
+    - service docker start
     - docker-compose version
   script:
     - echo "If the files are built successfully, test some files with one command:"
