update .gitlab-ci.yml v10

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,26 @@
 image: docker/compose:alpine-1.27.4
 
+services:
+  - mysql:8.0
+  - redis:latest
+  - nginx:latest
+  - node:14
+
 stages:
   - build
   - test
 
 build-code-job:
   stage: build
-  image: node:14
   script:
     - echo "Check the Node version, then build some Node and React project files:"
     - node -v
-    - npm install
     - npm -v
     - npm build
 
 test-code-job:
   stage: test
   before_script:
-    - service docker start
     - docker-compose version
   script:
     - echo "If the files are built successfully, test some files with one command:"
