--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,17 +75,17 @@ services:
     cap_add:
       - SYS_NICE
 
-  # phpmyadmin:
-  #   image: phpmyadmin/phpmyadmin:4.6
-  #   restart: always
-  #   ports:
-  #     - "8181:80"
-  #   environment:
-  #     - PMA_HOST=db
-  #     - PMA_USER=root
-  #     - PMA_PASSWORD=root
-  #   depends_on:
-  #     - db
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:4.6
+    restart: always
+    ports:
+      - "8181:80"
+    environment:
+      - PMA_HOST=db
+      - PMA_USER=root
+      - PMA_PASSWORD=root
+    depends_on:
+      - db
 
   redis:
     image: redis:latest
