--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
-image: docker/compose:alpine-1.27.4
+image: docker:20.0.0
 
 services:
+  - docker:dind
   - mysql:8.0
   - redis:latest
   - nginx:latest
@@ -18,13 +19,16 @@ build-code-job:
     - node -v
     - npm -v
     - npm build
+    - docker compose down
+    - apk add --no-cache docker-compose
+    - docker-compose up db-test -d --build
 
 test-code-job:
   stage: test
   before_script:
+    - docker version
     - docker-compose version
   script:
     - echo "If the files are built successfully, test some files with one command:"
-    - docker-compose up -d
     - sleep 15
-    - docker-compose exec -T node npm run test
+    - docker-compose exec -T node npm test
