--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
-image: docker:19.0.0
+image:
+  name: docker/compose:latest
 
 services:
   - docker:dind
@@ -7,6 +8,10 @@ services:
   # - nginx:latest
   # - phpmyadmin/phpmyadmin:4.6
 
+before_script:
+  # - docker version
+  - docker-compose version
+
 stages:
   - build
   - test
@@ -14,13 +19,11 @@ stages:
 build-code-job:
   stage: build
   image: node:14
- 
   script:
     - echo "Check the Node version, then build some Node and React project files:"
     - node -v
     - npm -v
     - npm build
-    - apk add --no-cache docker-compose
     - docker-compose down
     - docker-compose up db-test -d --build
 
