--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,18 @@
-image:
-  name: "docker/compose:latest"
+image: docker/compose:alpine-1.27.4
 
 services:
-  - docker:dind
-  # - mysql:8.0
+  - mysql:8.0
   # - redis:latest
   # - nginx:latest
   # - phpmyadmin/phpmyadmin:4.6
 
-before_script:
-  # - docker version
-  - docker-compose version
-
 stages:
   - build
   - test
+
+before_script:
+  - docker info
+  - docker-compose version
 
 build-code-job:
   stage: build
@@ -25,13 +23,11 @@ build-code-job:
     - npm -v
     - npm build
     - docker-compose down
-    - docker-compose up db-test -d --build
+    # - apk add --no-cache docker-compose
+    - docker-compose up -d
 # test-code-job:
 #   stage: test
-#    before_script:
-#     # - docker version
-#     - docker-compose version
 #   script:
 #     - echo "If the files are built successfully, test some files with one command:"
 #     - sleep 15
-#     - docker-compose exec -T node npm test
+#     - docker-compose exec -T node npm run test
