--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
-image: docker/compose:alpine-1.27.4
+image:
+  - name: "docker/compose:alpine-1.27.4"
+  - name: "node:14"
 
 services:
   - mysql:8.0
@@ -10,13 +12,11 @@ stages:
   - build
   - test
 
-before_script:
-  # - docker info
-  - docker-compose version
-
 build-code-job:
   stage: build
-  image: node:14
+  before_script:
+    # - docker info
+    - docker-compose version
   script:
     - echo "Check the Node version, then build some Node and React project files:"
     - node -v
