--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@ image: docker/compose:alpine-1.27.4
 
 services:
   - mysql:8.0
-  - node:14
   # - redis:latest
   # - nginx:latest
   # - phpmyadmin/phpmyadmin:4.6
@@ -13,6 +12,7 @@ stages:
 
 build-code-job:
   stage: build
+  image: node:14
   before_script:
     # - docker info
     - docker-compose version
