--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.5"
+version: "3.6"
 
 services:
   node:
@@ -57,21 +57,8 @@ services:
       MYSQL_USER: user
       MYSQL_PASSWORD: secret
     volumes:
+      - ./be-app/docker/services/db/init:/docker-entrypoint-initdb.d
       - ./be-app/docker/services/db/data:/var/lib/mysql
-    cap_add:
-      - SYS_NICE
-
-  db-test:
-    image: mysql:8.0
-    restart: always
-    ports:
-      - "3306:3306"
-    command: --default-authentication-plugin=mysql_native_password
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: project_test
-      MYSQL_USER: user
-      MYSQL_PASSWORD: secret
     cap_add:
       - SYS_NICE
 
@@ -97,12 +84,3 @@ services:
       - ./be-app/docker/services/redis/data:/data
     ports:
       - "6379:6379"
-
-  # redis-commander:
-  #   hostname: redis-commander
-  #   image: rediscommander/redis-commander:latest
-  #   restart: always
-  #   environment:
-  #     - REDIS_HOSTS=local:redis:6379
-  #   ports:
-  #     - "8081:8081"
