--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,6 @@ image: docker/compose:latest
 
 services:
   - docker:dind
-  # - mysql:8.0
-  # - redis:latest
-  # - nginx:latest
-  # - phpmyadmin/phpmyadmin:4.6
 
 before_script:
   - docker info
@@ -17,18 +13,13 @@ stages:
 
 build-code-job:
   stage: build
-  # image: node:14
   script:
-    - echo "Check the Node version, then build some Node and React project files:"
-    # - node -v
-    # - npm -v
-    # - npm build
-    - docker-compose build
-    # - apk add --no-cache docker-compose
-    # - docker-compose up db-test -d --build
-# test-code-job:
-#   stage: test
-#   script:
-#     - echo "If the files are built successfully, test some files with one command:"
-#     - sleep 15
-#     - docker-compose exec -T node npm test
+    - echo "Check the Node version, then build docker-compose:"
+    - docker-compose up --build -d
+
+test-code-job:
+  stage: test
+  script:
+    - echo "If the files are built successfully, test some files with one command:"
+    - sleep 15
+    - docker-compose exec -T node npm test
