update .gitlab-ci.yml v17

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,11 +15,11 @@ build-code-job:
   stage: build
   script:
     - echo "Check the Node version, then build docker-compose:"
-    - docker-compose up --build -d
+    - docker-compose build
 
 test-code-job:
   stage: test
   script:
     - echo "If the files are built successfully, test some files with one command:"
-    - sleep 15
+    - docker-compose up -d
     - docker-compose exec -T node npm test
