--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,9 +21,7 @@ test-code-job:
   stage: test
   script:
     - echo "If the files are built successfully, test some files with one command:"
-
     - docker-compose up --build -d
-    - sleep 10
-    - docker-compose exec -T node ifconfig
-    - docker-compose exec -T db ifconfig
+    - sleep 15
+    - docker-compose exec -T node curl ifconfig.me
     - docker-compose exec -T node npm test
