--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,6 @@ test-code-job:
   stage: test
   script:
     - echo "If the files are built successfully, test some files with one command:"
-    - docker-compose up --build -d
+    - docker-compose up -d
     - sleep 15
-    - docker-compose exec -T node curl ifconfig.me
     - docker-compose exec -T node npm test
