--- a/be-app/.env.sample
+++ b/be-app/.env.sample
@@ -9,8 +9,8 @@ DB_PORT=3306
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_SERVICE=gmail
-MAIL_USERNAME=example@gmail.com
-MAIL_PASSWORD=example
+MAIL_USERNAME=lampt2404@gmail.com
+MAIL_PASSWORD=lampt2404
 
 NODE_ENV=development
 PORT=4000
