--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,12 +28,15 @@ stages:
 
 dev:
   stage: deploy
+  before_script:
+    - export DYNAMIC_ENV_VAR=UAT
+  tags:
+    - uat
+  only:
+    - uat
   script:
-    - echo "Deploy to staging server"
-    - docker-compose up -d
+    - echo setting up env $DYNAMIC_ENV_VAR
+    - docker-compose up --build -d
   environment:
     name: staging
     url: https://staging.example.com
-  when: manual
-  only:
-    - uat
