--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ dev:
     - echo setting up env $DYNAMIC_ENV_VAR
     - docker swarm init
     - docker service create --name registry --publish published=5000,target=5000 registry:2
-    - docker compose push
+    - docker-compose push
     - docker stack deploy -c docker-compose.yml --with-registry-auth wsm-dev
   environment:
     name: staging
