update .gitlab-ci.yml v32

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,12 +14,16 @@ stages:
 
 build:
   stage: build
+  tags:
+    - main-windows
   script:
     - echo "Check the Node version, then build docker-compose:"
     - docker-compose build
 
 test-node:
   stage: test
+  tags:
+    - main-windows
   script:
     - echo "If the files are built successfully, test some files with one command:"
     - docker-compose up --build -d
@@ -30,5 +34,7 @@ dev:
   stage: deploy
   only:
     - uat
+  tags:
+    - main-windows
   script:
     - docker-compose up --build -d
