--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,17 +13,19 @@ stages:
   - deploy
 
 build:
+  images: docker-in-docker
   stage: build
   tags:
-    - docker-in-docker
+    - main-docker-local
   script:
     - echo "Check the Node version, then build docker-compose:"
     - docker-compose build
 
 test-node:
+  images: docker-in-docker
   stage: test
   tags:
-    - docker-in-docker
+    - main-docker-local
   script:
     - echo "If the files are built successfully, test some files with one command:"
     - docker-compose up --build -d
@@ -31,10 +33,11 @@ test-node:
     - docker-compose exec -T node npm test
 
 dev:
+  images: docker-in-docker
   stage: deploy
   only:
     - uat
   tags:
-    - docker-in-docker
+    - main-docker-local
   script:
     - docker-compose up --build -d
