update .gitlab-ci.yml v37

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ stages:
   - deploy
 
 build:
-  images: docker-in-docker
+  images: docker-in-docker:latest
   stage: build
   tags:
     - main-docker-local
@@ -22,7 +22,7 @@ build:
     - docker-compose build
 
 test-node:
-  images: docker-in-docker
+  images: docker-in-docker:latest
   stage: test
   tags:
     - main-docker-local
@@ -33,7 +33,7 @@ test-node:
     - docker-compose exec -T node npm test
 
 dev:
-  images: docker-in-docker
+  images: docker-in-docker:latest
   stage: deploy
   only:
     - uat
