--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build:
   tags:
     - main-docker-local
   script:
-    - echo "Check the Node version, then build docker-compose:"
+    - export DOCKER_HOST="tcp://localhost:2375"
     - docker-compose build
 
 test-node:
@@ -26,6 +26,7 @@ test-node:
     - main-docker-local
   script:
     - echo "If the files are built successfully, test some files with one command:"
+    - export DOCKER_HOST="tcp://localhost:2375"
     - docker-compose up --build -d
     - sleep 15
     - docker-compose exec -T node npm test
@@ -37,4 +38,5 @@ dev:
   tags:
     - main-docker-local
   script:
+    - export DOCKER_HOST="tcp://localhost:2375"
     - docker-compose up --build -d
