--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ build:
   tags:
     - main-docker-local
   script:
+    - docker compose down -v
     - docker-compose build
 
 test-node:
@@ -25,9 +26,12 @@ test-node:
     - main-docker-local
   script:
     - echo "If the files are built successfully, test some files with one command:"
+    - export DOCKER_CLIENT_TIMEOUT = 120
+    - export COMPOSE_HTTP_TIMEOUT = 120
     - docker-compose up --build -d
     - sleep 15
     - docker-compose exec -T node npm test
+    - docker compose down -v
 
 dev:
   stage: deploy
@@ -36,4 +40,6 @@ dev:
   tags:
     - main-docker-local
   script:
+    - export DOCKER_CLIENT_TIMEOUT = 120
+    - export COMPOSE_HTTP_TIMEOUT = 120
     - docker-compose up --build -d
