--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,21 +17,23 @@ build:
   tags:
     - main-docker-local
   script:
-    - docker compose down -v
+    - docker-compose down -v
     - docker-compose build
+  only:
+    - develop
 
 test-node:
   stage: test
   tags:
     - main-docker-local
+  before_scrtip:
+    - export COMPOSE_HTTP_TIMEOUT = 120
   script:
     - echo "If the files are built successfully, test some files with one command:"
-    - export DOCKER_CLIENT_TIMEOUT = 120
-    - export COMPOSE_HTTP_TIMEOUT = 120
     - docker-compose up --build -d
     - sleep 15
     - docker-compose exec -T node npm test
-    - docker compose down -v
+    - docker-compose down -v
 
 dev:
   stage: deploy
@@ -39,7 +41,7 @@ dev:
     - uat
   tags:
     - main-docker-local
-  script:
-    - export DOCKER_CLIENT_TIMEOUT = 120
+  before_scrtip:
     - export COMPOSE_HTTP_TIMEOUT = 120
+  script:
     - docker-compose up --build -d
