--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ test-node:
   stage: test
   tags:
     - main-docker-local
-  before_scrtip:
+  before_script:
     - export COMPOSE_HTTP_TIMEOUT = 120
   script:
     - echo "If the files are built successfully, test some files with one command:"
@@ -41,7 +41,7 @@ dev:
     - uat
   tags:
     - main-docker-local
-  before_scrtip:
+  before_script:
     - export COMPOSE_HTTP_TIMEOUT = 120
   script:
     - docker-compose up --build -d
